--- a/examples/wasm-cc/BUILD
+++ b/examples/wasm-cc/BUILD
@@ -43,3 +43,11 @@ envoy_wasm_cc_binary(
     name = "envoy_filter_http_wasm_updated_example.wasm",
     srcs = ["envoy_filter_http_wasm_updated_example.cc"],
 )
+
+envoy_wasm_cc_binary(
+    name = "envoy_filter_http_wasm_modsecurity.wasm",
+    srcs = ["envoy_filter_http_wasm_modsecurity.cc", "utils.cc", "utils.h"],
+    deps = [
+        "@modsecurity//:lib",
+    ],
+)
