--- a/bazel/foreign_cc/BUILD
+++ b/bazel/foreign_cc/BUILD
@@ -456,6 +456,131 @@ envoy_cmake(
 )
 
 envoy_cmake(
+    name = "llvm_15_0_7",
+    cache_entries = {
+        # Disable both: BUILD and INCLUDE, since some of the INCLUDE
+        # targets build code instead of only generating build files.
+        "LLVM_BUILD_BENCHMARKS": "off",
+        "LLVM_INCLUDE_BENCHMARKS": "off",
+        "LLVM_BUILD_DOCS": "off",
+        "LLVM_INCLUDE_DOCS": "off",
+        "LLVM_BUILD_EXAMPLES": "off",
+        "LLVM_INCLUDE_EXAMPLES": "off",
+        "LLVM_BUILD_TESTS": "off",
+        "LLVM_INCLUDE_TESTS": "off",
+        "LLVM_BUILD_TOOLS": "off",
+        "LLVM_INCLUDE_TOOLS": "off",
+        "LLVM_ENABLE_IDE": "off",
+        "LLVM_ENABLE_LIBEDIT": "off",
+        "LLVM_ENABLE_LIBXML2": "off",
+        "LLVM_ENABLE_TERMINFO": "off",
+        "LLVM_ENABLE_ZLIB": "off",
+        "LLVM_ENABLE_ZSTD": "off",
+        "LLVM_TARGETS_TO_BUILD": "X86",
+        "CMAKE_CXX_FLAGS": "-Wno-unused-command-line-argument",
+    },
+    # `lld` doesn't work on MacOS
+    generate_args = select({
+        "@platforms//os:linux": [
+            "-GNinja",
+            "-DLLVM_USE_LINKER=lld",
+            "-DCMAKE_BUILD_TYPE=MinSizeRel",
+        ],
+        "//conditions:default": [
+            "-GNinja",
+            "-DCMAKE_BUILD_TYPE=MinSizeRel",
+        ],
+    }),
+    lib_source = "@org_llvm_llvm_15_0_7//:all",
+    out_data_dirs = [
+        "bin",
+        "include",
+        "lib",
+        "libexec",
+        "share",
+    ],
+    out_static_libs = [
+        # How to get the library list:
+        #  build LLVM with "-DLLVM_INCLUDE_TOOLS=ON"
+        #  cd bin and run "./llvm-config --libnames"
+        "libLLVMWindowsManifest.a",
+        "libLLVMXRay.a",
+        "libLLVMLibDriver.a",
+        "libLLVMDlltoolDriver.a",
+        "libLLVMCoverage.a",
+        "libLLVMLineEditor.a",
+        "libLLVMX86Disassembler.a",
+        "libLLVMX86AsmParser.a",
+        "libLLVMX86CodeGen.a",
+        "libLLVMX86Desc.a",
+        "libLLVMX86Info.a",
+        "libLLVMOrcJIT.a",
+        "libLLVMMCJIT.a",
+        "libLLVMJITLink.a",
+        "libLLVMInterpreter.a",
+        "libLLVMExecutionEngine.a",
+        "libLLVMRuntimeDyld.a",
+        "libLLVMOrcTargetProcess.a",
+        "libLLVMOrcShared.a",
+        "libLLVMDWP.a",
+        "libLLVMSymbolize.a",
+        "libLLVMDebugInfoPDB.a",
+        "libLLVMDebugInfoGSYM.a",
+        "libLLVMOption.a",
+        "libLLVMObjectYAML.a",
+        "libLLVMMCA.a",
+        "libLLVMMCDisassembler.a",
+        "libLLVMLTO.a",
+        "libLLVMPasses.a",
+        "libLLVMCFGuard.a",
+        "libLLVMCoroutines.a",
+        "libLLVMObjCARCOpts.a",
+        "libLLVMipo.a",
+        "libLLVMVectorize.a",
+        "libLLVMLinker.a",
+        "libLLVMInstrumentation.a",
+        "libLLVMFrontendOpenMP.a",
+        "libLLVMFrontendOpenACC.a",
+        "libLLVMExtensions.a",
+        "libLLVMDWARFLinker.a",
+        "libLLVMGlobalISel.a",
+        "libLLVMMIRParser.a",
+        "libLLVMAsmPrinter.a",
+        "libLLVMDebugInfoMSF.a",
+        "libLLVMDebugInfoDWARF.a",
+        "libLLVMSelectionDAG.a",
+        "libLLVMCodeGen.a",
+        "libLLVMIRReader.a",
+        "libLLVMAsmParser.a",
+        "libLLVMInterfaceStub.a",
+        "libLLVMFileCheck.a",
+        "libLLVMFuzzMutate.a",
+        "libLLVMTarget.a",
+        "libLLVMScalarOpts.a",
+        "libLLVMInstCombine.a",
+        "libLLVMAggressiveInstCombine.a",
+        "libLLVMTransformUtils.a",
+        "libLLVMBitWriter.a",
+        "libLLVMAnalysis.a",
+        "libLLVMProfileData.a",
+        "libLLVMObject.a",
+        "libLLVMTextAPI.a",
+        "libLLVMMCParser.a",
+        "libLLVMMC.a",
+        "libLLVMDebugInfoCodeView.a",
+        "libLLVMBitReader.a",
+        "libLLVMCore.a",
+        "libLLVMRemarks.a",
+        "libLLVMBitstreamReader.a",
+        "libLLVMBinaryFormat.a",
+        "libLLVMTableGen.a",
+        "libLLVMSupport.a",
+        "libLLVMDemangle.a",
+    ],
+    working_directory = "llvm",
+)
+
+envoy_cmake(
     name = "nghttp2",
     cache_entries = {
         "ENABLE_LIB_ONLY": "on",
@@ -477,14 +602,26 @@ envoy_cmake(
 envoy_cmake(
     name = "wamr",
     cache_entries = {
+        "LLVM_DIR": "$EXT_BUILD_DEPS/copy_llvm_15_0_7/llvm/lib/cmake/llvm",
+        # JIT by default
         "WAMR_BUILD_AOT": "0",
-        "WAMR_BUILD_FAST_INTERP": "1",
-        "WAMR_BUILD_INTERP": "1",
-        "WAMR_BUILD_JIT": "0",
+        "WAMR_BUILD_FAST_INTERP": "0",
+        "WAMR_BUILD_INTERP": "0",
+        "WAMR_BUILD_JIT": "1",
+        # disable WASI
         "WAMR_BUILD_LIBC_WASI": "0",
-        "WAMR_BUILD_MULTI_MODULE": "0",
-        "WAMR_BUILD_SIMD": "0",
+        # MVP
+        "WAMR_BULID_BULK_MEMORY": "1",
+        "WAMR_BULID_REF_TYPES": "1",
+        "WAMR_BUILD_SIMD": "1",
         "WAMR_BUILD_TAIL_CALL": "1",
+        # name section
+        "WAMR_BUILD_CUSTOM_NAME_SECTION": "1",
+        "WAMR_BULID_LOAD_CUSTOM_SECTION": "1",
+        # trap information
+        "WAMR_BUILD_DUMP_CALL_STACK": "1",
+        # others
+        "WAMR_BUILD_MULTI_MODULE": "0",
         "WAMR_BUILD_WASM_CACHE": "0",
         "WAMR_DISABLE_HW_BOUND_CHECK": "0",
         "WAMR_DISABLE_STACK_HW_BOUND_CHECK": "1",
@@ -492,6 +629,7 @@ envoy_cmake(
     lib_source = "@com_github_wamr//:all",
     out_static_libs = ["libvmlib.a"],
     tags = ["skip_on_windows"],
+    deps = [":llvm_15_0_7"],
 )
 
 envoy_cmake(
